# Sauim

./: .gitignore  Embedding_extraction_Sauim_bicolor.ipynb  README.md  Sauim_bicolor.ipynb  Sauim_bicolor_detections.ipynb  Sauim_bicolor_occupancy_modelling (1).ipynb  Sauim_bicolor_occupancy_modelling.ipynb  ocsvm.joblib
OCSVM-models/: ocsvm.joblib
embeddings/: README
jupyter-notebooks/: Sauim_bicolor (backup).ipynb  Sauim_bicolor.ipynb  Sauim_bicolor_Spectrogram.ipynb  Sauim_bicolor_occupancy_modelling.ipynb
records/: Mindu_Saguinus bicolor_02.02.19-000.csv  Mindu_Saguinus_bicolor_02.02.19-000_detections.txt  README  records.csv
sauim-detector/: README.md  installed-requirements.txt  pyproject.toml  setup.py
sauim-detector/sauim_detector/: classifier.py  cli.py  exporter.py  loader.py
sauim-detector/sauim_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sauim-detector/sauim_detector/models/: ocsvm_sauim.joblib
